--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 scrapy = "^2.11.0"
+pytest = "^7.4.3"
+scrapyscript = "^1.1.5"
 
 
 [build-system]
