--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ python = "^3.12"
 scrapy = "^2.11.0"
 pytest = "^7.4.3"
 scrapyscript = "^1.1.5"
+mongoengine = "^0.27.0"
+pika = "^1.3.2"
+faker = "^21.0.0"
+redis = "^5.0.1"
+redis-lru = "^0.1.2"
 
 
 [build-system]
